force-app/main/default/objects/CRMfusionDBR101__Scenario_Target_Filter__c/CRMfusionDBR101__Scenario_Target_Filter__c.object-meta.xml
<CustomObject>
    <customHelpPage>CRMfusionDBR101__DB_Help</customHelpPage>
    <description>Scenario filter for filtering which records are being matched against.</description>
    <label>DupeBlocker Scenario Target Filter</label>
    <nameField>
        <displayFormat>Target Filter: {0}</displayFormat>
        <label>Target Filter Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DupeBlocker Scenario Target Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>