force-app/main/default/objects/CRMfusionDBR101__Scenario_Target_Filter__c/fields/CRMfusionDBR101__Calculated_Value__c.field-meta.xml
<CustomField>
    <fullName>CRMfusionDBR101__Calculated_Value__c</fullName>
    <label>Calculated Value</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>