force-app/main/default/objects/CRMfusionDBR101__Scenario_Target_Filter__c/fields/CRMfusionDBR101__Datetime_Criteria__c.field-meta.xml
<CustomField>
    <fullName>CRMfusionDBR101__Datetime_Criteria__c</fullName>
    <label>Date &amp; Time Criteria</label>
    <type>DateTime</type>
</CustomField>