force-app/main/default/objects/CRMfusionDBR101__Scenario_Target_Filter__c/fields/CRMfusionDBR101__Field_Display_Value__c.field-meta.xml
<CustomField>
    <fullName>CRMfusionDBR101__Field_Display_Value__c</fullName>
    <inlineHelpText>Select the field you&apos;d like to filter.</inlineHelpText>
    <label>Filtered Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>