force-app/main/default/objects/CRMfusionDBR101__Scenario_Target_Filter__c/fields/CRMfusionDBR101__Field_Name__c.field-meta.xml
<CustomField>
    <fullName>CRMfusionDBR101__Field_Name__c</fullName>
    <label>Filtered Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>