force-app/main/default/objects/CRMfusionDBR101__Scenario_Target_Filter__c/fields/CRMfusionDBR101__Scenario__c.field-meta.xml
<CustomField>
    <fullName>CRMfusionDBR101__Scenario__c</fullName>
    <label>Scenario</label>
    <referenceTo>CRMfusionDBR101__Scenario__c</referenceTo>
    <relationshipLabel>DupeBlocker Scenario Target Filters</relationshipLabel>
    <relationshipName>Scenario_Target_Filters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>